--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^6.23.1",
+    "react-simple-star-rating": "^5.1.7",
     "react-spinners": "^0.13.8",
+    "sweetalert2": "^11.12.0",
     "swiper": "^11.1.4"
   },
   "devDependencies": {
