--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
+    "react-parallax": "^3.5.1",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.23.1",
     "react-simple-star-rating": "^5.1.7",
